# AoC2025

./: .gitignore  README.md  advent-of-code.cabal  aoc-hs  cabal.project  hie.yaml  stack.yaml
common/: LICENSE  advent.cabal
common/src/: Advent.hs
common/src/Advent/: Prelude.hs  RangeList.hs
solutions/: RangeList.hs  day-01.hs  day-02.hs  day-03.hs  day-04.hs  day-05.hs  day-06.hs  solutions.cabal
solutions/src/: 02.hs  03.hs  05.hs  08.hs  09.hs
src/: AdventUtils.hs  DisjointSetsForest.hs  day-03.hs  day-06.hs  day-07.hs  day-08.hs
