cabal-version: 3.8

name:           advent-of-code
version:        0.1.0.0
description:    Solutions to 2025 Advent of Code in Haskell
homepage:       https://github.com/jbromley/AoC2025#readme
bug-reports:    https://github.com/jbromley/AoC2025/issues
author:         J. Bromley
copyright:      2025 J. Bromley
license:        GPL-3.0-or-later
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/jbromley/AoC2025

common deps
  default-extensions:
      TypeApplications
      OverloadedStrings
      LambdaCase
      TupleSections
      StrictData
      ImportQualifiedPost
  build-depends:
      attoparsec
    , base >=4.7 && <5
    , bytestring
    , bytestring-trie
    , containers
    , disjoint-set >=0.2
    , matrix
    , mtl
    , pointedlist
    , search-algorithms
    , split
    , text
    , vector
  other-modules:
      Paths_advent_of_code
  ghc-options:
    -Wall
  default-language: Haskell2010

-- Do not touch after this line. aoc-hs will edit it
executable day-01
  import: deps
  hs-source-dirs:
      src
  main-is: day-01.hs

executable day-02
  import: deps
  hs-source-dirs:
      src
  main-is: day-02.hs

executable day-03
  import: deps
  hs-source-dirs:
      src
  main-is: day-03.hs

executable day-04
  import: deps
  hs-source-dirs:
      src
  main-is: day-04.hs

executable day-05
  import: deps
  hs-source-dirs:
      src
  main-is: day-05.hs
  other-modules:
    AdventUtils
    , RangeList

executable day-06
  import: deps
  hs-source-dirs:
      src
  main-is: day-06.hs
  other-modules:
    AdventUtils

executable day-07
  import: deps
  hs-source-dirs:
      src
  main-is: day-07.hs

executable day-08
  import: deps
  hs-source-dirs:
      src
  main-is: day-08.hs
  other-modules:
    IntDisjointSets

executable day-09
  import: deps
  hs-source-dirs:
      src
  main-is: day-09.hs

