cabal-version:       3.0
name:                advent
version:             0.1.0.0
category:            None
synopsis:            Advent of Code common library
description:         All the core functionality needed for the
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Jay Bromley
maintainer:          jbromley@gmail.com
copyright:           2025 Jay Bromley
homepage:            https://github.com/jbromley/AoC2025
bug-reports:         https://github.com/jbromley/AoC2025/issues
build-type:          Simple
Tested-With:         GHC == {9.6.7}

source-repository head
  type: git
  location: https://github.com/jbromley/AoC2025

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  if impl(ghc >= 9.8)
    ghc-options:       -Wno-x-partial

  exposed-modules:
    Advent
    Advent.Prelude
    Advent.RangeList

  other-modules:

  build-tool-depends: alex:alex, happy:happy

  build-depends:
    array            ^>= 0.5.4,
    base             ^>= {4.18, 4.19},
    containers       ^>= {0.6, 0.7, 0.8},
    fgl              ^>= 5.8,
    MemoTrie         ^>= 0.6,
    mtl              ^>= 2.3.1,
    random           ^>= {1.2, 1.3},
    template-haskell,
    text,
    transformers     ^>= {0.5, 0.6},
    vector           ^>= 0.13,
